# comfyui-darkil-nodes

./: .gitignore  LICENSE  README.md  README_RU.MD  __init__.py  pyproject.toml
.github/workflows/: publish_action.yml
locales/ru/: nodeDefs.json
nodes/: global_utils.py  utilities.py
nodes/conditioning/: THIRD_PARTY_LICENSES.txt  krea2_rebalance_eq.py  presets.py  rebalance_core.py
nodes/files/: files_list.py
nodes/logic/: constant_setter.py  custom_combo.py  model_load_later.py  multi_toggles.py
nodes/lora/: wan22_lora_list_builder.py
nodes/text/: advanced_variable_builder.py  directives.py  prompt_builder.py  simple.py  strings_joiner.py  utilities.py  variable_builder.py
nodes/wan/: i2v_encode_middle.py  wan22_lora_list_builder.py
web/js/: advanced_variable_builder.js  colors.js  constant_setter.js  custom_combo.js  krea2_rebalance_eq.js  localization.js  multi_set_get.js  multi_toggles.js  prompt_builder_editor.js  prompt_builder_grammar.js  prompt_builder_i18n.js  simple_prompt_builder.js  strings_joiner.js  utils.js
