[project]
name = "comfyui-darkil-nodes"
version = "0.1.1"
description = "Various custom nodes for improved usability."
readme = "README.md"
license = { file = "LICENSE" }
dependencies = []

[tool.comfy]
PublisherId = "darkil" 
DisplayName = "ComfyUI-darkil-nodes"
Icon = "https://avatars.githubusercontent.com/u/72470814" 

[project.urls]
Repository = "https://github.com/pytraveler/comfyui-darkil-nodes"
